--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			href="https://fonts.googleapis.com/css?family=Bangers:regular"
 			rel="stylesheet"
 		/>
+    <a href="https://www.vecteezy.com/free-vector/comic"></a>
 		<style>
 			body {
 				font-family: "Bangers", sans-serif;
@@ -32,7 +33,8 @@
 		
 
 		<section
-			class="flex justify-center border-4 border-black bg-gradient-to-r from-blue-800 to-yellow-500 m-2 p-9 shadow-2xl"
+			class="flex justify-center border-4 border-black m-2 p-9 shadow-2xl bg-fit bg-center"
+      style="background-image: url(./assets/images/comis-background-1.jpg);"
 		>
 			<button class="score-board bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-2xl p-1 shadow-2xl">
 				<a href="./scores.html">Score Board</a>
@@ -57,32 +59,32 @@
 		</section>
 
 		<div
-			class="hero-name-display hidden flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10"
+			class="hero-name-display hidden flex-wrap border-4 border-black text-red-600 m-2 p-10" style="background-image: url(./assets/images/comis-background-1.jpg);"
 		>
 			<img class="hero-gif" src="#" />
 		</div>
 
 		<section
-			class="extra-info flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10"
+			class="extra-info flex-wrap border-4 border-black bg-local bg-bottom-right m-2 p-10 text-red-600" style="background-image: url(./assets/images/comics-background-2.jpg);"
 		>
 			<!-- FYI class name "buttons hidden" -->
 			<div class="flex-wrap buttons hidden" id="buttons">
 				<button
 					type="button"
-					class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 comics border-dashed border-4 border-amber-300"
+					class="hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 comics border-solid border-4 border-amber-300"
 				>
 					COMICS
 				</button>
 
 				<button
 					type="button"
-					class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events border-dashed border-4 border-amber-300"
+					class=" hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events border-solid border-4 border-amber-300"
 				>
 					EVENTS
 				</button>
 				<button
 					type="button"
-					class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 movie-appearances border-dashed border-4 border-amber-300"
+					class="hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 movie-appearances border-solid border-4 border-amber-300"
 				>
 					MOVIES
 				</button>
