--- a/scores.html
+++ b/scores.html
@@ -14,20 +14,25 @@
       href="https://fonts.googleapis.com/css?family=Bangers:regular"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Bangers", sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/scores.css" />
   </head>
+
   <body>
-    <button class="back"><a href="./index.html">Back to Main Page</a></button>
 
-    <div class="board-container">
-      <h2>These are some of earth's mightiest heroes</h2>
+    <header columns>
 
-      <div class="scores-container">
-        <h2>Top Super Teams</h2>
+      <button class="back button"><a href="./index.html">Back to Main Page</a></button>
+  
+      <div class="board-container">
+        <div class="title-container is-full" style="background-image: url(./assets/images/back.jpg);">
+          <h1 class="main-title title is-1">Behold! Earth's mightiest heroes!</h2>
+          </div>
+        </div>
+      </header>
+      
+      <div class="scores-container" style="background-image: url(./assets/images/back5.jpg)">
+        <h4 class="secondary-title title is-2">Top Super Teams:</h2>
         <ol class="teams-list"></ol>
       </div>
     </div>
